--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html {
     padding: 30px 0;
     transition: all 0.3s ease;
     font-family: 'Ubuntu', sans-serif;
-    z-index: 999;
+    z-index: 900;
 }    
 .navbar.sticky{
     padding: 15px 0;
@@ -571,6 +571,9 @@ footer span a:hover {
         margin: 20px 0;
         font-size: 25px;
     }
+    .navbar .menu li a:active{
+        background: #fff;
+    }    
     .home .home-content .text-2 {
         font-size: 70px;   
     }
