cambio color a mobile

--- a/css/style.css
+++ b/css/style.css
@@ -571,8 +571,8 @@ footer span a:hover {
         margin: 20px 0;
         font-size: 25px;
     }
-    .navbar .menu li a:active{
-        background: #fff;
+    .navbar.sticky .menu li a:hover {
+        color: crimson;
     }    
     .home .home-content .text-2 {
         font-size: 70px;   
