--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
     margin: auto;
 }
 
-/*navbar styling*/
+/*NAVBAR CSS*/
 .navbar{
     position: fixed;
     width: 100%;
@@ -25,7 +25,7 @@ html {
 }    
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: #ff4e5b;
 }
 .navbar .max-width {
     display: flex;
@@ -38,7 +38,7 @@ html {
     font-weight: 600;
 }
 .navbar .logo a span {
-    color: crimson;
+    color: #ff4e5b;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -56,13 +56,13 @@ html {
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-    color: crimson;
+    color: #ff4e5b;
 }
 .navbar.sticky .menu li a:hover {
-    color: #111;
+    color: #5d504a;
 }
 
-/*menu btn styling*/
+/*MENU CSS*/
 .menu-btn {
     color: #fff;
     font-size: 23px;
@@ -73,7 +73,7 @@ html {
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #ff4e5b;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -93,10 +93,10 @@ html {
     pointer-events: auto;
 }
 
-/*home section styling*/
+/*HOME CSS*/
 .home {
     display: flex;
-    background-image: url("https://raw.githubusercontent.com/JaviMaranda/personalportfolio/main/images/banner.jpg");
+    background: #5d504a;
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh; 
@@ -122,29 +122,30 @@ html {
     margin: 5px 0;
 }
 .home .home-content .text-3 span {
-    color: crimson;
+    color: #ff4e5b;
 }
 .home .home-content a {
     display: inline-block;
-    background: crimson;
+    background: #ff4e5b;
     color: #fff;
     font-size: 20px;
     padding: 12px 36px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #ff4e5b;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover {
-    color: crimson;
+    color: #ff4e5b;
     background: none;
 }
-/*all similar content styling code*/
+/*Codigo similar para diferentes las secciones*/ 
 section {
     padding: 100px 0;
 }
 .about, .services, .skills, .teams, .contact, footer {
     font-family: 'Poppins', sans-serif;
+    color: #222;
 }
 .about .about-content,
 .services .serv-content, 
@@ -171,7 +172,7 @@ section .title::before {
     left: 50%;
     width: 180px;
     height: 3px;
-    background: #111;
+    background: #222;
     transform: translateX(-50%);
 }
 section .title::after {
@@ -179,17 +180,13 @@ section .title::after {
     bottom: -12px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: #ff4e5b;
     padding: 5px;
     background: #fff;
     transform: translateX(-50%);
 }
 
-/*about section styling*/
-
-.about .title::after {
-    content: "who i am";
-}
+/*SOBRE MI CSS*/
 .about .about-content .left {
     width: 45%;
 }
@@ -208,42 +205,37 @@ section .title::after {
     margin-bottom: 10px;
 }
 .about .about-content .right .text span {
-    color: crimson;
+    color: #ff4e5b;
 }
 .about .about-content .right p {
     text-align: justify;
 }
 .about .about-content .right a {
     display: inline-block;
-    background: crimson;
+    background: #ff4e5b;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #ff4e5b;
     transition: all 0.3s ease;
 } 
 .about .about-content .right a:hover {
-    color: crimson;
+    color: #ff4e5b;
     background: none;
 }
 
-/*services section styling*/
+/*LENGUAJES CSS*/
 
 .services, .teams{
     color: #fff;
-    background: #111;
+    background: #5d504a;
 }
 .services .title::before,
 .teams .title::before {
     background: #fff;
-}
-.services .title::after,
-.teams .title::after {
-    background: #111;
-    content: "what i provide";
 }
 .services .serv-content .card {
     width: calc(33% - 20px);
@@ -258,14 +250,14 @@ section .title::after {
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover {
-    background: crimson;
+    background: #ff4e5b;
 }
 .services .serv-content .card:hover .box {
     transform: scale(1.05);
 }
 .services .serv-content .card i {
     font-size: 50px;
-    color: crimson;
+    color: #ff4e5b;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -277,85 +269,63 @@ section .title::after {
     margin: 10px 0 7px 0;
 }
 
-/*skills section styling*/
+/*LIBRERÍAS Y FRAMEWORKS + SKILLS*/
 
-.skills .title::after {
-    content: "what i know";
-}
 .skills .skills-content .column {
     width: calc(50% - 30px);
 }
-.skills .skills-content .left .text {
+.skills .skills-content .right .text {
     font-size: 25px;
     font-weight: 600;
     margin-bottom: 10px;
 }
-.skills .skills-content .left p {
+.skills .skills-content .right p {
     text-align: justify; 
 }
-.skills .skills-content .left a {
-    display: inline-block;
-    background: crimson;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 8px 16px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.3s ease;
-}
-.skills .skills-content .left a:hover {
-    color: crimson;
-    background: none;
-}
-.skills .skills-content .right .bars {
+.skills .skills-content .left .bars {
     margin-bottom: 15px;
 }
-.skills .skills-content .right .info {
+.skills .skills-content .left .info {
     display: flex;
     margin-bottom: 5px;
     align-items: center;
     justify-content: space-between;
 }
-.skills .skills-content .right span {
+.skills .skills-content .left span {
     font-weight: 500;
     font-size: 18px;
 }
-.skills .skills-content .right .line {
+.skills .skills-content .left .line {
     height: 5px;
     width: 100%;
     background: lightgrey;
     position: relative;
 }
-.skills .skills-content .right .line::before {
+.skills .skills-content .left .line::before {
     content: "";
     position: absolute;
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: #ff4e5b;
 }
-.skills-content .right .html::before {
+.skills-content .left .html::before {
     width: 90%;
 }
-.skills-content .right .css::before {
-    width: 70%;
+.skills-content .left .css::before {
+    width: 90%;
 }
-.skills-content .right .js::before {
-    width: 80%;
-}
-.skills-content .right .php::before {
+.skills-content .left .js::before {
     width: 40%;
 }
-.skills-content .right .mysql::before {
+.skills-content .left .php::before {
+    width: 60%;
+}
+.skills-content .left .mysql::before {
     width: 60%;
 }
 
-/*teams section styling*/
-.teams .title::after {
-    content: "who with me";
-}
+/*PROYECTOS RECIENTES CSS*/
 .teams .carousel .card {
     background: #222;
     border-radius: 6px;
@@ -365,7 +335,7 @@ section .title::after {
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover {
-    background: crimson;
+    background: #ff4e5b;
 }
 .teams .carousel .card .box {
     display: flex;
@@ -387,11 +357,27 @@ section .title::after {
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid #ff4e5b;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
     border-color: #fff;
+}
+.teams .carousel .card .box a {
+    display: inline-block;
+    background: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #fff;
+    transition: all 0.3s ease;
+}
+.teams .carousel .card .box a:hover {
+    color: #222;
+    background: #fff;
 }
 .owl-dots {
     text-align: center;
@@ -403,7 +389,7 @@ section .title::after {
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid #ff4e5b!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active {
@@ -412,13 +398,11 @@ section .title::after {
 }
 .owl-dot.active,
 .owl-dot:hover {
-    background: crimson!important;
+    background: #ff4e5b!important;
 }
 
-/*contact section styling*/
-.contact .title::after {
-    content: "get in touch";
-}
+/*CONTACTO CSS*/
+
 .contact .contact-content .column {
     width: calc(50% - 30px);
 }
@@ -443,13 +427,13 @@ section .title::after {
 }
 .contact .contact-content .row i {
     font-size: 25px;
-    color: crimson;
+    color: #ff4e5b;
 }
 .contact .contact-content .info .head {
     font-weight: 500;
 }
 .contact .contact-content .info .sub-title {
-    color: #333;
+    color: #222;
 }
 .contact .right form .fields{
     display: flex;
@@ -493,8 +477,8 @@ section .title::after {
 .contact .right form .button button {
     width: 100%;
     height: 100%;
-    border: 2px solid crimson;
-    background: crimson;
+    border: 2px solid #ff4e5b;
+    background: #ff4e5b;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -503,25 +487,25 @@ section .title::after {
     transition: all 0.3s ease;
 }
 .contact .right form .button button:hover {
-    color: crimson;
+    color: #ff4e5b;
     background: none;
 }
 
-/*footer section styling*/
+/*FOOTER*/
 footer {
-    background: #111;
+    background: #222;
     padding: 20px 23px;
     color: #fff;
 }
 footer span a {
-    color: crimson;
+    color: #ff4e5b;
     text-decoration: none;
 }
 footer span a:hover {
     text-decoration: underline;
 }
 
-/*respondive media query start*/
+/*RESPONSIVE MEDIA QUERYS*/
 
 @media (max-width: 1300px) {
     .home .max-width {
@@ -555,7 +539,7 @@ footer span a:hover {
         width: 100%;
         left: -100%;
         top: 0%;
-        background: #111;
+        background: #222;
         text-align: center;
         padding-top: 80px;
         transition: all 0.3s ease;
@@ -572,7 +556,7 @@ footer span a:hover {
         font-size: 25px;
     }
     .navbar.sticky .menu li a:hover {
-        color: crimson;
+        color: #ff4e5b;
     }    
     .home .home-content .text-2 {
         font-size: 70px;   
